added logic to flag main quests

--- a/modsettings.json
+++ b/modsettings.json
@@ -22,6 +22,30 @@
                 }
             ],
             "$version": "v1"
+        },
+        {
+            "Name": "Option",
+            "Description": null,
+            "IsAdvanced": false,
+            "Keys": [
+                {
+                    "Value": true,
+                    "Name": "IdentifyMainQuests",
+                    "Description": null,
+                    "$version": "v1",
+                    "$type": "DaggerfallWorkshop.Game.Utility.ModSupport.ModSettings.ToggleKey"
+                },
+                {
+                    "Min": 0,
+                    "Max": 10,
+                    "Value": 2,
+                    "Name": "MessageDelay",
+                    "Description": null,
+                    "$version": "v1",
+                    "$type": "DaggerfallWorkshop.Game.Utility.ModSupport.ModSettings.SliderIntKey"
+                }
+            ],
+            "$version": "v1"
         }
     ]
 }
